--- a/index.html
+++ b/index.html
@@ -11,6 +11,29 @@
 
 <body>
     <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffd803;">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+              <a class="navbar-brand" href="#">About Us</a> <!-- We can put a logo here-->
+              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" style="color: #272343;" href="#">Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="color: #272343;" href="#">Actors<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="color: #272343;" href="#">Genres<span class="sr-only">(current)</span></a> <!--This needs to be drop-down menu-->
+                </li>
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </div>
+          </nav>
     </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
