search not working

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" id="search-input" placeholder="" aria-label="Search">
+          <input class="form-control mr-sm-2" type="input" id="search-input" placeholder="" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" id="search-button" type="submit">Search</button>
         </form>
       </div>
