added overview with hovering

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
         </form>
       </div>
     </nav>
-    <div class="container"></div>
+    <div class="main-container">
+    <div class="container"></div></div>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
