--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <h2><i class="fa-solid fa-ticket fa-xl" id="our-icon"></i> CINEMADEV</h2>
+      <h2 class=""><i class="fa-solid fa-ticket fa-xl" id="our-icon"></i> CINEMADEV</h2>
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item" id="home-page-list-item">
-          <a class="nav-link" href="#" id="home-page">Home<span class="sr-only">(current)</span></a>
+          <a class="nav-link home-btn" href="#" id="home-page">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item" id="actors-page-list-item">
           <a class="nav-link" href="#" id="actors-page">Actors<span class="sr-only">(current)</span></a>
