--- a/index.html
+++ b/index.html
@@ -13,6 +13,71 @@
 <body>
     <div class="container">
     </div>
+    <!-- footer -->
+
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="footer-col">
+                <h4>CINEMADEV</h4>
+                <ul>
+                    <li><a href="#">about us</a></li>
+                    <li><a href="#">our team</a></li>
+                    <li><a href="#">privacy policy</a></li>
+  
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>get help</h4>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">contact us</a></li>
+                    <li><a href="#">request movie/a></li>
+                    <li><a href="#">payment options</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Our team</h4>
+                <ul>
+                    <li><a href="#">Furkan Akkaya</a></li>
+                    <li><a href="#">Omer Amro Alestvani</a></li>
+                    <li><a href="#">Pelin karakoca</a></li>
+                    <li><a href="#">Naji Alhousami</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Naji Alhusami</h4>
+                <div class="social-links">
+                    <a href="https://github.com/naji-alhusami"><i class="fab fa-github"></i></a> 
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+                <h4>Omer Alestvani</h4>
+                <div class="social-links">
+                  <a href="https://github.com/Omer-Amr"><i class="fab fa-github"></i></a> 
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="#"><i class="fab fa-instagram"></i></a>
+                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              </div>
+              <h4>Pelin karakoca</h4>
+                <div class="social-links">
+                  <a href="https://github.com/pelinkarakoca"><i class="fab fa-github"></i></a> 
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="#"><i class="fab fa-instagram"></i></a>
+                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              </div>
+              <h4>Furkan Akkaya</h4>
+                <div class="social-links">
+                  <a href="https://github.com/furkanakkayaa"><i class="fab fa-github"></i></a> 
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="#"><i class="fab fa-instagram"></i></a>
+                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              </div>
+            </div>
+        </div>
+    </div>
+  </footer>
     <script type="text/javascript" src="script.js"></script>
 </body>
 
