--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
             <a class="nav-link" href="#" id="actors-page">Actors<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown" id="genre-list-item">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Genres</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownGenre" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Genres
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" id="genreDropdownGorgeous">
             </div>
           </li>
           <li class="nav-item dropdown" id="filter-list-item">
