--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container">
         <div class="row">
             <div class="footer-col">
-                <h4>CINEMADEV</h4>
+              <h2 class=""><i class="fa-solid fa-ticket fa-xl" id="our-icon"></i> CINEMADEV</h2>
                 <ul>
                     <li><a href="#">about us</a></li>
                     <li><a href="#">our team</a></li>
