--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         </div>
     </div>
   </footer>
+  <footer class="copyright">&copy; Copyright 2022 Cinemadev</footer>
   <script type="text/javascript" src="script.js"></script>
 </body>
 
