--- a/index.html
+++ b/index.html
@@ -18,8 +18,97 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light" id="navigation-bar">
-      <button
+    <nav>
+      <div id="navbar">
+        <div id="logo">
+          <!-- <img src="./images/logo.jpg" alt="logo" id="logo" /> -->
+          <h6>
+            <i class="fa-solid fa-ticket fa-xl" id="logo">CINEMADEV</i>
+          </h6>
+        </div>
+
+        <div id="nav-links">
+          <ul id="links">
+            <li id="li-nav">HOME</li>
+            <li id="li-nav">
+              <a href="#" id="genres">GENRES</a>
+              <i class="bx bxs-chevron-down htmlcss-arrow arrow"></i>
+              <ul class="htmlCss-sub-menu sub-menu" id="dropgeneres"></ul>
+            </li>
+            <li id="li-nav">
+              <a href="#">FILTER</a>
+              <i class="bx bxs-chevron-down js-arrow arrow"></i>
+              <ul class="js-sub-menu sub-menu"></ul>
+            </li>
+            <li id="li-nav">
+              <a href="#" onclick="fetchActors();return false;" id="genres">ACTORS</a>
+            </li>
+            <li id="li-nav">ABOUT US</li>
+            <form id="search-form">
+              <input
+                class="form-control mr-sm-2"
+                type="search"
+                id="search-input"
+                placeholder=""
+                aria-label="Search"
+              />
+              <button
+                class="btn btn-outline-success my-2 my-sm-0"
+                id="search-button"
+                type="submit"
+              >
+                Search
+              </button>
+            </form>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- <nav>
+      <div class="navbar">
+        <i class="bx bx-menu"></i>
+
+        <div class="logo">
+          <img src="./images/logo.png" alt="logo" id="logo" />
+        </div>
+
+
+        <div class="nav-links">
+          <div class="sidebar-logo">
+            <span class="logo-name">CodingLab</span>
+            <i class="bx bx-x"></i>
+          </div>
+          <ul class="links">
+            <li>
+              <a href="#" id="genres">GENRES</a>
+              <i class="bx bxs-chevron-down htmlcss-arrow arrow"></i>
+              <ul class="htmlCss-sub-menu sub-menu" id="dropgeneres"></ul>
+            </li>
+            <li>
+              <a href="#">FILTER</a>
+              <i class="bx bxs-chevron-down js-arrow arrow"></i>
+              <ul class="js-sub-menu sub-menu">
+                <li><a href="#">Most Popular</a></li>
+                <li><a href="#">New</a></li>
+                <li><a href="#">Good rated</a></li>
+                <li><a href="#">Example</a></li>
+              </ul>
+            </li>
+            <li><a href="#" id="all-actors">ACTORS</a></li>
+            <li><a href="#">ABOUT US</a></li>
+          </ul>
+        </div>
+        <div class="search-box">
+          <i class="bx bx-search"></i>
+          <div class="input-box">
+            <input type="text" placeholder="Search..." />
+          </div>
+        </div>
+      </div>
+    </nav> -->
+
+    <!-- <nav class="navbar navbar-expand-lg navbar-light" id="navigation-bar"> -->
+    <!-- <button
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
@@ -29,13 +118,13 @@
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      </button> -->
+    <!-- <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <h2>
           <i class="fa-solid fa-ticket fa-xl" id="our-icon"></i> CINEMADEV
         </h2>
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item" id="home-page-list-item">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0"> -->
+    <!-- <li class="nav-item" id="home-page-list-item">
             <a
               class="nav-link"
               href="#"
@@ -43,6 +132,13 @@
               onclick="console.log('click')"
               >Home<span class="sr-only">(current)</span></a
             >
+          </li> -->
+    <!-- <li>
+            <a href="#" id='genres'>GENRES</a>
+            <i class='bx bxs-chevron-down htmlcss-arrow arrow  '></i>
+            <ul class="htmlCss-sub-menu sub-menu" id='dropgeneres'>
+              
+            </ul>
           </li>
           <li class="nav-item" id="actors-page-list-item">
             <a class="nav-link" href="#" id="actors-page"
@@ -110,9 +206,77 @@
           </button>
         </form>
       </div>
-    </nav>
+    </nav> -->
     <div class="main-container">
-    <div class="container"></div></div>
+      <div class="container"></div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="footer-col">
+            <h2 class="">
+              <i class="fa-solid fa-ticket fa-xl" id="our-icon"></i> CINEMADEV
+            </h2>
+            <ul>
+              <li><a href="#">about us</a></li>
+              <li><a href="#">our team</a></li>
+              <li><a href="#">privacy policy</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>get help</h4>
+            <ul>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">contact us</a></li>
+              <li><a href="#">request movie</a></li>
+              <li><a href="#">payment options</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Our team</h4>
+            <ul>
+              <li><a href="#">Furkan Akkaya</a></li>
+              <li><a href="#">Omer Amro Alestvani</a></li>
+              <li><a href="#">Pelin karakoca</a></li>
+              <li><a href="#">Naji Alhusami</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Naji Alhusami</h4>
+            <div class="social-links">
+              <a href="https://github.com/naji-alhusami"
+                ><i class="fab fa-github"></i
+              ></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+            <h4>Omer Alestvani</h4>
+            <div class="social-links">
+              <a href="https://github.com/Omer-Amr"
+                ><i class="fab fa-github"></i
+              ></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+            <h4>Pelin karakoca</h4>
+            <div class="social-links">
+              <a href="https://github.com/pelinkarakoca"
+                ><i class="fab fa-github"></i
+              ></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+            <h4>Furkan Akkaya</h4>
+            <div class="social-links">
+              <a href="https://github.com/furkanakkayaa"
+                ><i class="fab fa-github"></i
+              ></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <footer class="copyright">&copy; Copyright 2022 Cinemadev</footer>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
