--- a/index.html
+++ b/index.html
@@ -18,183 +18,181 @@
   </head>
 
   <body>
-    <nav>
-      <div id="navbar">
-        <div id="logo">
-          <!-- <img src="./images/logo.jpg" alt="logo" id="logo" /> -->
-          <h6>
-            <i class="fa-solid fa-ticket fa-xl" id="logo">CINEMADEV</i>
-          </h6>
-        </div>
-
-        <div id="nav-links">
-          <ul id="links">
-            <li id="li-nav">HOME</li>
-            <li id="li-nav">
-              <a href="#" id="genres">GENRES</a>
-              <i class="bx bxs-chevron-down htmlcss-arrow arrow"></i>
-              <ul class="htmlCss-sub-menu sub-menu" id="dropgeneres"></ul>
-            </li>
-            <li id="li-nav">
-              <a href="#">FILTER</a>
-              <i class="bx bxs-chevron-down js-arrow arrow"></i>
-              <ul class="js-sub-menu sub-menu"></ul>
-            </li>
-            <li id="li-nav">
-              <a href="#" onclick="fetchActors();return false;" id="genres">ACTORS</a>
-            </li>
-            <li id="li-nav">ABOUT US</li>
-            <form id="search-form">
-              <input
-                class="form-control mr-sm-2"
-                type="search"
-                id="search-input"
-                placeholder=""
-                aria-label="Search"
-              />
-              <button
-                class="btn btn-outline-success my-2 my-sm-0"
-                id="search-button"
-                type="submit"
-              >
-                Search
-              </button>
-            </form>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- <nav>
-      <div class="navbar">
-        <i class="bx bx-menu"></i>
-
-        <div class="logo">
-          <img src="./images/logo.png" alt="logo" id="logo" />
-        </div>
-
-
-        <div class="nav-links">
-          <div class="sidebar-logo">
-            <span class="logo-name">CodingLab</span>
-            <i class="bx bx-x"></i>
-          </div>
-          <ul class="links">
-            <li>
-              <a href="#" id="genres">GENRES</a>
-              <i class="bx bxs-chevron-down htmlcss-arrow arrow"></i>
-              <ul class="htmlCss-sub-menu sub-menu" id="dropgeneres"></ul>
-            </li>
-            <li>
-              <a href="#">FILTER</a>
-              <i class="bx bxs-chevron-down js-arrow arrow"></i>
-              <ul class="js-sub-menu sub-menu">
-                <li><a href="#">Most Popular</a></li>
-                <li><a href="#">New</a></li>
-                <li><a href="#">Good rated</a></li>
-                <li><a href="#">Example</a></li>
-              </ul>
-            </li>
-            <li><a href="#" id="all-actors">ACTORS</a></li>
-            <li><a href="#">ABOUT US</a></li>
-          </ul>
-        </div>
-        <div class="search-box">
-          <i class="bx bx-search"></i>
-          <div class="input-box">
-            <input type="text" placeholder="Search..." />
-          </div>
-        </div>
-      </div>
-    </nav> -->
-
-    <!-- <nav class="navbar navbar-expand-lg navbar-light" id="navigation-bar"> -->
-    <!-- <button
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <h6>
+        <i class="fa-solid fa-ticket fa-xl" id="logo">CINEMADEV</i>
+      </h6>
+      <button
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
-        data-target="#navbarTogglerDemo01"
-        aria-controls="navbarTogglerDemo01"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon"></span>
-      </button> -->
-    <!-- <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <h2>
-          <i class="fa-solid fa-ticket fa-xl" id="our-icon"></i> CINEMADEV
-        </h2>
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0"> -->
-    <!-- <li class="nav-item" id="home-page-list-item">
-            <a
-              class="nav-link"
-              href="#"
-              id="home-page"
-              onclick="console.log('click')"
-              >Home<span class="sr-only">(current)</span></a
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mx-auto" id="navbar-content">
+          <li class="nav-item active px-sm-3">
+            <a class="nav-link" href="index.html"
+              >Home <span class="sr-only">(current)</span></a
             >
-          </li> -->
-    <!-- <li>
-            <a href="#" id='genres'>GENRES</a>
-            <i class='bx bxs-chevron-down htmlcss-arrow arrow  '></i>
-            <ul class="htmlCss-sub-menu sub-menu" id='dropgeneres'>
-              
-            </ul>
           </li>
-          <li class="nav-item" id="actors-page-list-item">
-            <a class="nav-link" href="#" id="actors-page"
+          <!--  Movie dropdown-->
+          <li class="nav-item dropdown px-sm-3">
+            <a
+              class="text-dark nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Genres
+            </a>
+            <div
+              class="dropdown-menu"
+              id="movie-dropdown"
+              aria-labelledby="navbarDropdown"
+            ></div>
+            <ul class="htmlCss-sub-menu sub-menu" id="dropgeneres"></ul>
+          </li>
+
+          <!--Beginning of Find Movies-->
+          <li class="nav-item dropdown px-sm-3" id="filterNav">
+            <a
+              class="text-dark nav-link dropdown-toggle find"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Filter
+            </a>
+            <div
+              id="dropdownMenu"
+              class="dropdown-menu"
+              aria-labelledby="navbarDropdown"
+            >
+              <form>
+                <div class="form-group">
+                  <div class="form-check ml-4 mt-2">
+                    <input
+                      class="form-check-input path"
+                      type="radio"
+                      name="exampleRadios2"
+                      id="now_playing"
+                      value="now_playing"
+                      checked
+                    />
+                    <label class="form-check-label" for="now_playing">
+                      Now Playing
+                    </label>
+                  </div>
+                  <div class="form-check ml-4 mt-2">
+                    <input
+                      class="form-check-input path"
+                      type="radio"
+                      name="exampleRadios2"
+                      id="popular"
+                      value="popular"
+                    />
+                    <label class="form-check-label" for="popular">
+                      Popular
+                    </label>
+                  </div>
+                  <div class="form-check ml-4 mt-2">
+                    <input
+                      class="form-check-input path"
+                      type="radio"
+                      name="exampleRadios2"
+                      id="top_rated"
+                      value="top_rated"
+                    />
+                    <label class="form-check-label" for="top_rated">
+                      Top Rated
+                    </label>
+                  </div>
+
+                  <div class="form-check ml-4 mt-2">
+                    <input
+                      class="form-check-input path"
+                      type="radio"
+                      name="exampleRadios2"
+                      id="upcoming"
+                      value="upcoming"
+                    />
+                    <label class="form-check-label" for="upcoming">
+                      Upcoming
+                    </label>
+                  </div>
+                  <div class="form-check ml-4 mt-2">
+                    <input
+                      class="form-check-input path"
+                      type="radio"
+                      name="exampleRadios2"
+                      id="releaseDate"
+                    />
+
+                    <label class="form-check-label" for="releaseDate">
+                      <label
+                        for="example-date-input"
+                        class="col-12 col-form-label p-0"
+                        >Release Date</label
+                      >
+
+                      <input
+                        class="form-control col-12"
+                        style="transform: scale(0.85)"
+                        type="date"
+                        value="2022-12-01"
+                        id="example-date-input"
+                      />
+                    </label>
+                  </div>
+                  <hr />
+                  <button
+                    type="submit"
+                    class="btn btn-primary ml-4 mt-2"
+                    data-toggle="collapse"
+                    data-target="#dropdownMenu"
+                    id="filterSearch"
+                  >
+                    Search
+                  </button>
+                </div>
+              </form>
+            </div>
+          </li>
+          <!-- Ending of Find Movies -->
+          <!-- Actors/Actresses -->
+          <li class="nav-item active px-sm-3">
+            <a class="nav-link" id="popularStars" href="index.html"
               >Actors<span class="sr-only">(current)</span></a
             >
           </li>
-          <li class="nav-item dropdown" id="genre-list-item">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdownMenuLink"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-              >Genres</a
+          <!--End of Actors-->
+          <!--About-->
+          <li class="nav-item active px-sm-3">
+            <a class="nav-link" id="about" href="#"
+              >About <span class="sr-only">(current)</span></a
             >
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
           </li>
-          <li class="nav-item dropdown" id="filter-list-item">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdownMenuLink"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-              >Filter
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="10"
-                height="10"
-                fill="currentColor"
-                class="bi bi-funnel-fill"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5v-2z"
-                /></svg
-            ></a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
+          <!--End of About-->
         </ul>
+        <!--Search-->
         <form class="form-inline my-2 my-lg-0">
           <input
-            class="form-control mr-sm-2"
-            type="search"
+            class="form-control mr-sm-2 col-xs-2"
             id="search-input"
-            placeholder=""
+            type="search"
+            placeholder="Search"
             aria-label="Search"
           />
           <button
@@ -206,77 +204,64 @@
           </button>
         </form>
       </div>
-    </nav> -->
-    <div class="main-container">
-      <div class="container"></div>
-    </div>
+    </nav>
 
-    <!-- Footer -->
-    <footer class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="footer-col">
-            <h2 class="">
-              <i class="fa-solid fa-ticket fa-xl" id="our-icon"></i> CINEMADEV
-            </h2>
-            <ul>
-              <li><a href="#">about us</a></li>
-              <li><a href="#">our team</a></li>
-              <li><a href="#">privacy policy</a></li>
-            </ul>
+    <div class="container"></div>
+
+    <footer class="footer py-3 align-items-bottom">
+      <div class="row">
+        <div class="footer-col">
+          <h6>
+            <i class="fa-solid fa-ticket fa-xl" id="footer-logo">CINEMADEV</i>
+          </h6>
+        </div>
+        <div class="footer-col">
+          <h4 class="cont-name">NAJI ALHUSAMI</h4>
+          <div class="social-links">
+            <a href="https://github.com/naji-alhusami" target="_blank"
+              ><i class="fab fa-github"></i
+            ></a>
+            <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
           </div>
-          <div class="footer-col">
-            <h4>get help</h4>
-            <ul>
-              <li><a href="#">FAQ</a></li>
-              <li><a href="#">contact us</a></li>
-              <li><a href="#">request movie</a></li>
-              <li><a href="#">payment options</a></li>
-            </ul>
+        </div>
+        <div class="footer-col">
+          <h4 class="cont-name">PELIN KARAKOCA</h4>
+          <div class="social-links">
+            <a href="https://github.com/pelinkarakoca" target="_blank"
+              ><i class="fab fa-github"></i
+            ></a>
+            <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
           </div>
-          <div class="footer-col">
-            <h4>Our team</h4>
-            <ul>
-              <li><a href="#">Furkan Akkaya</a></li>
-              <li><a href="#">Omer Amro Alestvani</a></li>
-              <li><a href="#">Pelin karakoca</a></li>
-              <li><a href="#">Naji Alhusami</a></li>
-            </ul>
+        </div>
+        <div class="footer-col">
+          <h4 class="cont-name">OMER ALESTVANI</h4>
+          <div class="social-links">
+            <a href="https://github.com/Omer-Amr" target="_blank"
+              ><i class="fab fa-github"></i
+            ></a>
+            <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
           </div>
-          <div class="footer-col">
-            <h4>Naji Alhusami</h4>
-            <div class="social-links">
-              <a href="https://github.com/naji-alhusami"
-                ><i class="fab fa-github"></i
-              ></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            </div>
-            <h4>Omer Alestvani</h4>
-            <div class="social-links">
-              <a href="https://github.com/Omer-Amr"
-                ><i class="fab fa-github"></i
-              ></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            </div>
-            <h4>Pelin karakoca</h4>
-            <div class="social-links">
-              <a href="https://github.com/pelinkarakoca"
-                ><i class="fab fa-github"></i
-              ></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            </div>
-            <h4>Furkan Akkaya</h4>
-            <div class="social-links">
-              <a href="https://github.com/furkanakkayaa"
-                ><i class="fab fa-github"></i
-              ></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            </div>
+        </div>
+        <div class="footer-col">
+          <h4 class="cont-name">FURKAN AKKAYA</h4>
+          <div class="social-links">
+            <a href="https://github.com/furkanakkayaa" target="_blank"
+              ><i class="fab fa-github"></i
+            ></a>
+            <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
           </div>
         </div>
       </div>
     </footer>
-    <footer class="copyright">&copy; Copyright 2022 Cinemadev</footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
