--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <a href="https://github.com/naji-alhusami" target="_blank"
               ><i class="fab fa-github"></i
             ></a>
-            <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/naji-alhusami-b629b01a4/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
           </div>
         </div>
         <div class="footer-col">
