Finish the project

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mx-auto" id="navbar-content">
+      <div class="collapse navbar-collapse bg-light" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto" id="navbar-content">
           <li class="nav-item active px-sm-3">
             <a class="nav-link" href="index.html"
               >Home <span class="sr-only">(current)</span></a
@@ -59,7 +59,6 @@
               id="movie-dropdown"
               aria-labelledby="navbarDropdown"
             ></div>
-            <ul class="htmlCss-sub-menu sub-menu" id="dropgeneres"></ul>
           </li>
 
           <!--Beginning of Find Movies-->
@@ -151,7 +150,7 @@
                         class="form-control col-12"
                         style="transform: scale(0.85)"
                         type="date"
-                        value="2022-12-01"
+                        value="2020-08-19"
                         id="example-date-input"
                       />
                     </label>
@@ -189,15 +188,15 @@
         <!--Search-->
         <form class="form-inline my-2 my-lg-0">
           <input
-            class="form-control mr-sm-2 col-xs-2"
-            id="search-input"
+            class="form-control mr-sm-2"
+            id="searchBox"
             type="search"
             placeholder="Search"
             aria-label="Search"
           />
           <button
             class="btn btn-outline-success my-2 my-sm-0"
-            id="search-button"
+            id="searchButton"
             type="submit"
           >
             Search
@@ -221,7 +220,11 @@
             <a href="https://github.com/naji-alhusami" target="_blank"
               ><i class="fab fa-github"></i
             ></a>
-            <a href="https://www.linkedin.com/in/naji-alhusami-b629b01a4/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a
+              href="https://www.linkedin.com/in/naji-alhusami-b629b01a4/"
+              target="_blank"
+              ><i class="fab fa-linkedin-in"></i
+            ></a>
           </div>
         </div>
         <div class="footer-col">
@@ -253,15 +256,21 @@
         </div>
       </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
